--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-animated-heart": "^0.0.8",
     "react-dom": "^18.2.0",
